fix: text-align: justifyの代わり

--- a/src/css/bl_posts.css
+++ b/src/css/bl_posts.css
@@ -2,10 +2,11 @@
  * 記事一覧リスト
  */
 .bl_posts_item {
-  padding: 0.7em 0;
   border-bottom: 1px solid var(--monochrome-light);
   display: block;
   margin: 0 auto;
+  /* indent left sightly (substitute for `text-align: justify`) */
+  padding: 0.7em 0 0.7em 0.2em;
 }
 
 .bl_posts_item:first-child {
@@ -26,7 +27,6 @@
 .bl_posts_summary {
   padding-top: 0.3em;
   line-height: 1.5;
-  text-align: justify-all; /* also justify ellipsis token */
 }
 
 .bl_posts_footer {
